Fixed file paths

--- a/home.html
+++ b/home.html
@@ -226,7 +226,7 @@
         </div>
     </footer>
 
-    <script src="./posts.js"></script>
+    <script src="./assets/js/posts.js"></script>
     <script>
         // Render filters and posts from posts.js
         const postsEl = document.getElementById('posts');
