--- a/home.html
+++ b/home.html
@@ -141,10 +141,21 @@
 
         /* Footer */
         footer {
-            background-color: #2e2e2d;
-            padding: 2rem 0;
-            margin-top: 4rem;
-            border-top: 1px solid #232323;
+            background: #181818;
+            padding: 2rem 0 1.5rem;
+            margin-top: 3rem;
+            border-top: 1px solid #333;
+            position: relative;
+        }
+
+        footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 20%;
+            right: 20%;
+            height: 1px;
+            background: linear-gradient(90deg, transparent 0%, #FFDB6E 50%, transparent 100%);
         }
 
         .footer-content {
@@ -153,19 +164,98 @@
             font-size: 0.9rem;
         }
 
+        .footer-main {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .footer-brand {
+            text-align: left;
+        }
+
+        .footer-brand .logo {
+            font-size: 1rem;
+            font-weight: 500;
+            color: #FFDB6E;
+            text-decoration: none;
+            transition: color 0.2s ease;
+        }
+
+        .footer-brand .logo:hover {
+            color: #ffffff;
+        }
+
+
         .footer-links {
-            margin-bottom: 1rem;
+            display: flex;
+            gap: 2rem;
+            justify-content: center;
+            align-items: center;
         }
 
         .footer-links a {
             color: #e0e0e0;
             text-decoration: none;
-            margin: 0 1rem;
+            font-size: 0.9rem;
+            font-weight: 500;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            position: relative;
         }
 
         .footer-links a:hover {
             color: #FFDB6E;
+            background-color: rgba(255, 219, 110, 0.1);
+            transform: translateY(-1px);
         }
+
+        .footer-social {
+            text-align: right;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 1rem;
+            justify-content: flex-end;
+        }
+
+        .social-links a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 32px;
+            height: 32px;
+            background-color: #2a2a2a;
+            color: #e0e0e0;
+            text-decoration: none;
+            border-radius: 50%;
+            transition: all 0.2s ease;
+            border: 1px solid #333;
+            font-size: 0.8rem;
+        }
+
+        .social-links a:hover {
+            background-color: #FFDB6E;
+            color: #181818;
+            transform: translateY(-1px);
+            box-shadow: 0 2px 8px rgba(255, 219, 110, 0.2);
+        }
+
+        .footer-bottom {
+            padding-top: 1rem;
+            border-top: 1px solid #333;
+            text-align: center;
+            color: #888888;
+            font-size: 0.75rem;
+        }
+
+        .footer-bottom p {
+            margin: 0;
+        }
+
 
         /* Responsive */
         @media (max-width: 768px) {
@@ -184,6 +274,33 @@
 
             .container {
                 padding: 0 15px;
+            }
+
+            /* Footer responsive */
+            .footer-main {
+                flex-direction: column;
+                gap: 1rem;
+                text-align: center;
+            }
+
+            .footer-brand {
+                text-align: center;
+            }
+
+            .footer-social {
+                text-align: center;
+            }
+
+            .social-links {
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .social-links a {
+                width: 28px;
+                height: 28px;
+                font-size: 0.7rem;
             }
         }
     </style>
@@ -216,12 +333,23 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="footer-links">
-                    <a href="mailto:gabriel@example.com">Email</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">LinkedIn</a>
+                <div class="footer-main">
+                    <div class="footer-brand">
+                        <a href="https://gabrieldalton.com" target="_blank" rel="noopener noreferrer" class="logo">Gabriel Dalton</a>
+                    </div>
+                    
+                    <div class="footer-social">
+                        <div class="social-links">
+                            <a href="#" title="LinkedIn" aria-label="Connect on LinkedIn">in</a>
+                        </div>
+                    </div>
                 </div>
-                <p>&copy; <span id="year">2025</span> Gabriel Dalton</p>
+                
+                <div class="footer-bottom">
+                    <p>
+                        <span>&copy; <span id="year">2025</span> Gabriel Dalton</span>
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
